# DHPC

./: CMakeLists.text  CMakeLists.txt  README.md  Workstation.ipynb  graph.eps  grid.edgelist  makefile_ethz  makefile_paulina  matrix.txt  mycsv.csv
.ipynb_checkpoints/: Workstation-checkpoint.ipynb
Workstation/: Dijkstra.c  Dijkstra.cpp  a.out  aStart  ipRandomGrid.txt  log  main_A_Start.d  main_dijkstra.d  makefile  map.txt  map100.gpl  map3.gpl  mapLowRadio.gpl  mape3000.gpl  rgg.gpl
Workstation/a.out.dSYM/Contents/Resources/DWARF/: a.out
include/: A_Star_copy.h  A_Start.h  Graph.hpp  dijkstra.hpp  read_input_file.h
src/: A_Start.cpp  bellmanford_matrix_big.cpp  bellmanfordalgo.cpp  dijkstra.cpp  main_A_Start.cpp  main_dijkstra.cpp  temp.c
tests/: testGraph.cpp
